--- a/main.tex
+++ b/main.tex
@@ -40,14 +40,17 @@ Deep Convolutional Networks trained by gradient descent have become the standard
     \caption{Filters learned by Alexnet's first layer}
     \label{fig:learnedweights}
 \end{figure}
-XCubed is an unsupervised, gradient-free, and loss-free algorithm for getting weights for a convolutional neural network. The algorithm, shown in Figure \ref{fig:diagram}, creates a dictionary of features from patches of your data using a repeated compounding method. When run on the Oxford 17 flowers dataset, the XCubed algorithm produces the first layer filters shown in Figure \ref{fig:x3weights} after 1000 iterations. Alexnet produces very similar filters, shown in figure \ref{fig:learnedweights}, but runs much longer, taking 2.5 hours on GPU rather than 3 seconds on CPU.
+XCubed is an unsupervised, gradient-free, and loss-free algorithm for getting weights for a convolutional neural network. The algorithm, shown in Figure \ref{fig:diagram}, creates a dictionary of features from patches of your data using a repeated compounding method. When run on the Oxford 17 flowers dataset, the XCubed algorithm produces the first layer filters shown in Figure \ref{fig:x3weights} after 1000 iterations. Alexnet produces very similar filters, shown in figure \ref{fig:learnedweights}.
 \section{Results}
 \begin{figure}
     \centering
-    \includegraphics[width=.8\linewidth]{trainedfet}
-    \caption{Filters learned by Alexnet's first layer}
+    \includegraphics[width=.8\linewidth]{X3GRAPH}
+    \caption{Accuracy of various training methods for Alexnet on 17 Flowers}
     \label{fig:netspeedup}
 \end{figure}
+The first Alexnet network had its first layer pretrained with XCubed and frozen, and it trained significantly faster than the baseline Alexnet, achieving 99\% accuracy 10 epochs before the regular Alexnet, which was at 90\% accuracy at the time. An Alexnet network where all of the convolutional layers are trained with XCubed and the first three layers are frozen trains much faster than a standard Alexnet or an Alexnet where the first layer is trained with XCubed, with our network reaching 99\% accuracy in just 8 epochs, as shown in Figure \ref{fig:netspeedup}. The training is more comparable to an Alexnet pretrained on imagenet, which starts off with a higher accuraccy and reaches 99\% just 1 epoch before at 7 epochs.
+
+On the ISIC melanoma challenge dataset, our model achieved an accuracy of 74\% in just 45 epochs using a simple Alexnet. The highest accuracy achieved in the 2018 contest without external data was 84\%, and this algorithm would have made 15th place if you do not include entrants who used external data. This model also took less than 3 hours to run on an Intel i5 machine with a Titan X GPU, with the XCubed pretraining only taking 63 minutes and 46 seconds using only the cpu. Interestingly, the first layer features produced by the XCubed algorithm were significantly different from the first layer features for 17 flowers. The features had much more texture features in them such as checker and squiggle patterns.
 \section{Discussion}
 \section{Methods}
 \section{Additional information}
