--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,10 @@
 @inproceedings{learnvcraft,
-author = {Antipov, Grigory and Berrani, Sid Ahmed and Ruchaud, Natacha and Dugelay, Jean-Luc},
-year = {2015},
-month = {10},
-pages = {},
-title = {Learned vs. Hand-Crafted Features for Pedestrian Gender Recognition},
-doi = {10.1145/2733373.2806332}
+    author = {Antipov, Grigory and Berrani, Sid Ahmed and Ruchaud, Natacha and Dugelay, Jean-Luc},
+    year = {2015},
+    month = {10},
+    pages = {},
+    title = {Learned vs. Hand-Crafted Features for Pedestrian Gender Recognition},
+    doi = {10.1145/2733373.2806332}
 }
 @INPROCEEDINGS{Lecun98gradient,
     author = {Yann Lecun and Léon Bottou and Yoshua Bengio and Patrick Haffner},
@@ -14,39 +14,64 @@ doi = {10.1145/2733373.2806332}
     pages = {2278--2324}
 }
 @incollection{alexnet,
-title = {ImageNet Classification with Deep Convolutional Neural Networks},
-author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
-booktitle = {Advances in Neural Information Processing Systems 25},
-editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
-pages = {1097--1105},
-year = {2012},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+    title = {ImageNet Classification with Deep Convolutional Neural Networks},
+    author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
+    booktitle = {Advances in Neural Information Processing Systems 25},
+    editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+    pages = {1097--1105},
+    year = {2012},
+    publisher = {Curran Associates, Inc.},
+    url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
 }
 @article{learningproblems,
-author = {Glorot, Xavier and Bengio, Y},
-year = {2010},
-month = {01},
-pages = {249-256},
-title = {Understanding the difficulty of training deep feedforward neural networks},
-volume = {9},
-journal = {Journal of Machine Learning Research - Proceedings Track}
+    author = {Glorot, Xavier and Bengio, Y},
+    year = {2010},
+    month = {01},
+    pages = {249-256},
+    title = {Understanding the difficulty of training deep feedforward neural networks},
+    volume = {9},
+    journal = {Journal of Machine Learning Research - Proceedings Track}
 }
 @article{vanishinggradients,
- author = {Bengio, Y. and Simard, P. and Frasconi, P.},
- title = {Learning Long-term Dependencies with Gradient Descent is Difficult},
- journal = {Trans. Neur. Netw.},
- issue_date = {March 1994},
- volume = {5},
- number = {2},
- month = mar,
- year = {1994},
- issn = {1045-9227},
- pages = {157--166},
- numpages = {10},
- url = {http://dx.doi.org/10.1109/72.279181},
- doi = {10.1109/72.279181},
- acmid = {2328340},
- publisher = {IEEE Press},
- address = {Piscataway, NJ, USA},
+    author = {Bengio, Y. and Simard, P. and Frasconi, P.},
+    title = {Learning Long-term Dependencies with Gradient Descent is Difficult},
+    journal = {Trans. Neur. Netw.},
+    issue_date = {March 1994},
+    volume = {5},
+    number = {2},
+    month = mar,
+    year = {1994},
+    issn = {1045-9227},
+    pages = {157--166},
+    numpages = {10},
+    url = {http://dx.doi.org/10.1109/72.279181},
+    doi = {10.1109/72.279181},
+    acmid = {2328340},
+    publisher = {IEEE Press},
+    address = {Piscataway, NJ, USA},
+} 
+@data{melanoma1,
+    author = {Tschandl, Philipp},
+    publisher = {Harvard Dataverse},
+    title = "{The HAM10000 dataset, a large collection of multi-source dermatoscopic images of common pigmented     skin lesions}",
+    UNF = {UNF:6:IQTf5Cb+3EzwZ95U5r0hnQ==},
+    year = {2018},
+    version = {V1},
+    doi = {10.7910/DVN/DBW86T},
+    url = {https://doi.org/10.7910/DVN/DBW86T}
+}
+@article{melanoma2,
+    title={Skin lesion analysis toward melanoma detection: A challenge at the 2017 International symposium on biomedical imaging (ISBI), hosted by the international skin imaging collaboration (ISIC)},
+    author={David Gutman and Noel C. F. Codella and M. Emre Celebi and Brian Helba and Michael A. Marchetti and Nabin K. Mishra and Allan Halpern},
+    journal={2018 IEEE 15th International Symposium on Biomedical Imaging (ISBI 2018)},
+    year={2018},
+    pages={168-172}
+}
+@InProceedings{flowers,
+   author = "Nilsback, M-E. and Zisserman, A.",
+   title = "A Visual Vocabulary for Flower Classification",
+   booktitle = "Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition",
+   year = 2006,
+   volume = "2",
+   pages = "1447--1454",
 } 
