--- a/references.bib
+++ b/references.bib
@@ -74,4 +74,49 @@
    year = 2006,
    volume = "2",
    pages = "1447--1454",
-} 
+}
+@incollection{cowardtowards,
+  title={Towards a theoretical neuroscience},
+  author={Coward, L Andrew},
+  booktitle={Towards a Theoretical Neuroscience: from Cell Chemistry to Cognition},
+  pages={389--393},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{rozell2008sparse,
+  title={Sparse coding via thresholding and local competition in neural circuits},
+  author={Rozell, Christopher J and Johnson, Don H and Baraniuk, Richard G and Olshausen, Bruno A},
+  journal={Neural computation},
+  volume={20},
+  number={10},
+  pages={2526--2563},
+  year={2008},
+  publisher={MIT Press}
+}
+
+@article{olshausen1996emergence,
+  title={Emergence of simple-cell receptive field properties by learning a sparse code for natural images},
+  author={Olshausen, Bruno A and Field, David J},
+  journal={Nature},
+  volume={381},
+  number={6583},
+  pages={607},
+  year={1996},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{hahn2015deep,
+  title={Deep learning human actions from video via sparse filtering and locally competitive algorithms},
+  author={Hahn, William Edward and Lewkowitz, Stephanie and Lacombe, Daniel C and Barenholtz, Elan},
+  journal={Multimedia Tools and Applications},
+  volume={74},
+  number={22},
+  pages={10097--10110},
+  year={2015},
+  publisher={Springer}
+}
+
+
+
