--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 
 \section{Introduction}
 
-Deep Convolutional Networks trained by gradient descent have become the standard for computer vision. This approach has become popular because of the high accuracy and relatively fast training with gradient descent.\cite{alexnet}\cite{Lecun98gradient} However, there are a several fundamental flaws in how we train these networks. An image classification task can be thought of as two tasks, detection -- where image features are identified -- and classification -- where a class is decided based on detected features. These tasks in theory are separate -- you shouldn't need to change your definition of an edge or corner to distinguish a cat from a dog.\cite{cowardtowards} However, in modern deep learning, we allow the network to learn its primitive features while it is learning the task. This is done because we ourselves do not know what primitive features we need to best classify objects. Features learned by gradient descent have long been shown to outperform hand-designed features.\cite{learnvcraft} However, learning these features slows down training significantly, as loss back-propagates through to the first layers and changes them often, even though the layers may have accurate features. This also causes the networks to learn more biases in the training data, and to require more data in order to learn more weights. Other problems with back-propagating through the entire network that arise more in larger networks include the vanishing gradient problem, which causes gradients at the beginning of the network to all be near zero and makes them unable to train properly.\cite{vanishinggradients}\cite{learningproblems} We propose a new way of training a neural network that mitigates these and other problems.
+Deep Convolutional Networks trained by gradient descent have become the standard for computer vision. This approach has become popular because of the high accuracy and relatively fast training with gradient descent.\cite{alexnet}\cite{Lecun98gradient} However, there are a several fundamental flaws in how we train these networks. An image classification task can be thought of as two tasks, detection -- where image features are identified -- and classification -- where a class is decided based on detected features. These tasks in theory are separate -- you shouldn't need to change your definition of an edge or corner to distinguish a cat from a dog.\cite{cowardtowards} However, in modern deep learning, we allow the network to learn its primitive features while it is learning the task. This is done because we ourselves do not know what primitive features we need to best classify objects. Features learned by gradient descent have long been shown to outperform hand-designed features.\cite{learnvcraft} However, learning these features slows down training significantly, as loss back-propagates through to the first layers and changes them often, even though the layers may have accurate features. This also causes the networks to learn more biases in the training data, and to require more data in order to learn more weights. One solution to this problem is pretraining a neural network on another dataset and finetuning it on your dataset. However, not all datasets have features well represented by datasets like imagenet, which are common for pretraining, and thus pretraining will not work as well for certain types of data. Other problems with back-propagating through the entire network that arise more in larger networks include the vanishing gradient problem, which causes gradients at the beginning of the network to all be near zero and makes them unable to train properly.\cite{vanishinggradients}\cite{learningproblems} We propose a new way of training a neural network that mitigates these and other problems.
 
 \begin{figure}[!htb]
     \centering
@@ -98,56 +98,8 @@ The first Alexnet network had its first layer pretrained with XCubed and frozen,
 On the ISIC melanoma challenge dataset\cite{melanoma1}\cite{melanoma2}, our model achieved an accuracy of 71\% in just 35 epochs using a simple Alexnet. For reference, the highest accuracy achieved in the 2018 contest without external data was 84\%, and that is with an ensemble of networks. This model also took less than 3 hours to run on an Intel i5 machine with a Titan X GPU, with the XCubed pretraining only taking 63 minutes and 46 seconds using only the CPU. The network in fact outperforms an imagenet pretrained Alexnet significantly, as shown in Figure \ref{fig:melanomacompare}. Interestingly, the first layer features produced by the XCubed algorithm were significantly different from the first layer features for 17 flowers. The features, shown in Figure \ref{fig:melanoma} had much more texture features in them such as checker patterns.
 \section{Conclusion}
 These findings show that XCubed is a viable option for speeding up neural network training, and these speedups are comparable to pretraining. The melanoma result shows that XCubed can in fact outperform pretraining on datasets that have different properties and thus need different features. This might indicate XCubed utility for audio, sensory, and other non-image datasets. Potential future findings with this algorithm may include using the algorithm to pretrain generators in GANs, RNNs, or other types of artificial neural networks and applying this method to medical and non-image datasets.
-\section{Pseudocode}
-\begin{lstlisting}[language=Python]
-import numpy as np
-from numpy import matmul as mm
-from np.random import randint, randn
-from np.linalg import svd
-from scipy.io import imread
-import matplotlib.pyplot as plt
-
-def normalize_columns(X):
-    return mm(X, np.diag(1./(np.sqrt(np.sum(a**2, axis=0))+1e-6)))
-
-def get_batch(X, patchshape, batch_size=200):
-    ix = randint(0,X.shape[1]-patchshape[0])
-    iy = randint(0,X.shape[2]-patchshape[1])
-    iz = randint(0,X.shape[3]-patchshape[2]) if patchshape[2] != X.shape[3] else 0
-    B = X[randint(0,X.shape[0], size=batch_size),ix:ix + patchshape[0],iy:iy + patchshape[1],iz:iz + patchshape[2]].reshape(batch_size, patchshape[0]*patchshape[1]*patchshape[2])
-    B = B.T
-    B = B - np.mean(B, axis=0)
-    U,S,V = svd(mm(B, B.T))
-    ZCAMatrix = mm(U, mm(np.diag(1.0/np.sqrt(S+1e-5)),U.T))
-    B = mm(B, ZCAMatrix)
-    return B
-
-def train_XCubed(W, dataset, patchshape, batch_size, iterations):
-    for i in range(iterations):
-        batch = get_batch(X, patchshape, batch_size=batch_size)
-        W = normalize_columns(W)
-        a = 0.5*normalize_columns(mm(W.T, batch))**3
-        W += mm((batch - mm(W,a)),a.T)
-    return W
-
-import glob
-filelist = glob.glob('data/*.png')
-Data = np.array([imread(fname) for fname in filelist])
-
-Filters = randn(363,64)
-Filters = train_XCubed(Filters, Data, (11,11,3), 200, 1000)
-Filters = Filters.transpose(1,0).reshape(64,11,11,3)
-np.save('filters.npy', Filters)
-
-fig, axs = plt.subplots(8, 8)
-fig.suptitle('Features')
-plt.axes('off')
-for i in range(8):
-    for j in range(8):
-        axs[i][j].imshow(Filters[i*8+j])
-plt.savefig('filters.png')
-plt.show()
-\end{lstlisting}
+\section{Code}
+\lstinputlisting[language=Python]{code/XCubed.py}
 \nocite{*}
 \bibliographystyle{unsrt}
 \bibliography{references}
